<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_arrowback"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/support"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="50dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:lines="3"
                android:gravity="top" />

            <LinearLayout
                android:id="@+id/ll_selectImage"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/select_image"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    android:textSize="24sp"/>

                <ImageView
                    android:id="@+id/iv_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/logo"
                    android:scaleType="centerInside"
                    android:background="@android:color/darker_gray" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_send_report"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:layout_marginTop="16dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
