<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_arrowback"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/accountsecurity"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="50dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/btnProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/profile"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:drawablePadding="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:clickable="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="16sp"
                android:text="@string/username"
                android:gravity="start|center" />

            <TextView
                android:id="@+id/tv_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="16sp"
                android:gravity="end|center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:clickable="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:padding="10dp"
                android:text="@string/email"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:padding="10dp"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:clickable="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="16sp"
                android:text="@string/phone_number"
                android:gravity="start|center" />

            <TextView
                android:id="@+id/tv_numPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="16sp"
                android:gravity="end|center" />
        </LinearLayout>

        <Button
            android:id="@+id/btnChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/ChangePass"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:drawablePadding="8dp"/>

        <Button
            android:id="@+id/btnDelAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/delAcc"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:drawablePadding="8dp"/>

    </LinearLayout>


</LinearLayout>
