<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_arrowback"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/notification"
            android:textSize="48sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="50dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:divider="?android:attr/dividerHorizontal"
        android:showDividers="middle">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/notifiApp"
            android:textSize="18sp"
            tools:ignore="VisualLintButtonSize" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/TBmail"
            android:textSize="18sp"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>


</LinearLayout>
