<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:background="@color/grey"
        android:gravity="center"
        android:padding="20dp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_arrowback"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/logo"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/default_avatar"/>

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="24sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:clickable="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:padding="10dp"
                android:text="@string/username"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:inputType="text"
                android:maxLength="20"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textSize="16sp"
                app:counterMaxLength="20"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:clickable="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:padding="10dp"
                android:text="@string/email"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:clickable="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="16sp"
                android:text="@string/phone_number"
                android:gravity="start|center" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_numPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:inputType="phone"
                android:maxLength="11"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textSize="16sp"
                app:counterMaxLength="11"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:clickable="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="16sp"
                android:text="@string/address"
                android:gravity="start|center" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_btn"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:padding="15dp"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:backgroundTint="@color/lightgray" />

            <Button
                android:id="@+id/btn_save"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/green"
                android:textColor="@color/black"
                android:padding="15dp"
                android:text="@string/save" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>